Update to BETA 12.10.2 (7046)
• [Experimental] enable R8 optimizations